@@ -1,3 +1,7 @@
+2009-11-03  Jonathan Pryor  <jpryor@novell.com>
+
+	* Delegates.cs, Eithers.cs, Lamdas.cs, Tuples.cs: Flush header.
+
 2009-09-17  Jonathan Pryor  <jpryor@novell.com>
 
 	* IEnumerable.cs: Add .Cache() extension method.
